--- a/_Imminence/story.tex
+++ b/_Imminence/story.tex
@@ -15,7 +15,7 @@
 
 そうした状況に陥ると、死は妙なリアリティを帯び、私の体を包み込む。これは一種の臨死体験と呼べるのではないか。安全な臨死体験。
 
-なぜこんな感情に襲われるのか。私は現在にしか存在しないのであって、未来のことはわからない。突然気が狂って自ら死を選ぶようなことはしない、そう断言する自信はない。たとえそれが5秒後の未来であってもだ。断言できないのは、潜在的に死に惹かれているのではなかろうか。死が持つ不思議な引力に引き寄せられている。実際、進化論において死は種の遺伝子を汚染しないための合理的選択として位置付けられている。我々の遺伝子は、死に引き寄せられるようにプログラムされているのだ。
+なぜこんな感情に襲われるのか。私は現在にしか存在しないのであって、未来のことはわからない。突然気が狂って自ら死を選ぶようなことはしない、そう断言する自信はない。たとえそれが5秒後の未来であってもだ。断言できないのは、潜在的に死に惹かれているのではなかろうか。死が持つ不思議な引力に引き寄せられている。実際、進化論において死は種の遺伝子を汚染しないための合理的選択として位置付けられている\footnote{ちゃんと調べる}。我々の遺伝子は、死に引き寄せられるようにプログラムされているのだ。
 
 私は昨年まで電車通学をしていた。駅のホームに立ち、電車を待つ。電車が目の前を通り過ぎるその直前にまたあの感覚に襲われる。それは毎日のルーティンと化していた。繰り返される「安全な臨死体験」を通じて、私は常に死を意識しながら生活した。
 
@@ -29,11 +29,11 @@
   sudo rm -rf /
 \end{lstlisting}
 
-というものがある。これはファイルやフォルダを管理者権限で削除するためのコマンドであり、その対象としてルート（コンピュータの最上位ディレクトリ）を指定している。つまりこのコマンドを実行すると、コンピュータ内のすべてのファイル（システムファイルを含む）が削除される※1。
+というものがある。これはファイルやフォルダを管理者権限で削除するためのコマンドであり、その対象としてルート（コンピュータの最上位ディレクトリ）を指定している。つまりこのコマンドを実行すると、コンピュータ内のすべてのファイル（システムファイルを含む）が削除される\footnote{危険な操作のためシステムの設定によっては実行できない場合がある}。
 
 これはコンピュータの死と言えるのではないか。さらにプログラマの業務にコンピュータは必須であり、それが動かないとなるとプログラマも死んだことになる。
 
-私はこのコマンドを恐る恐るCLIに入力してみた。すると途端にあの感情が湧き上がってきた。エンターキーを押すとこのコマンドは即座に実行される。コンピュータをいとも簡単に死に至らしめることができる。数秒のちに、私は無事に実行前のコマンドをデリートキーで削除した。なお、エンターキーとデリートキーはキーボード配列上隣り同士に配置されている。
+私はこのコマンドを恐る恐るCLIに入力してみた。すると途端にあの感情が湧き上がってきた。エンターキーを押すとこのコマンドは即座に実行される。コンピュータをいとも簡単に死に至らしめることができる。数秒のちに、私は無事に実行前のコマンドをデリートキーで削除した。なお、エンターキーとデリートキーはキーボード配列上隣り同士に配置されている\footnote{間違えてエンターキーを押してしまうことは死ぬつもりなかったのに足が滑って飛び降りちゃった、に相当する}。
 
 それ以来、私は毎日のルーティンとして例のコマンドを入力しては消すという行為を行っている。繰り返される「安全な臨死体験」を通じて、私は再び死を意識しながら生活するようになった。
 
