--- a/_Counterintuitive/202305_oc.md
+++ b/_Counterintuitive/202305_oc.md
@@ -53,3 +53,8 @@
 1. 上演時間を作品名にする。
 2. 自由にパフォーマンスする。
 ```
+
+## デモ（モニタートラッキングシステム）
+それぞれのモニタのフレームをViveTrackerによりトラッキングし、仮想空間内に配置する。同空間内に設置されたプロジェクタから各フレームに映像を投影し、その投影結果をキャプチャし、最終的なモニタへの出力映像とする。また、トラッキングシステムにより算出されたモニタの各ピクセルの空間座標をもとにスリットスキャン効果を適用することで、鑑賞者（正確には仮想プロジェクタ）から各ピクセルまでの物理的距離に応じてピクセルの参照する時間軸が変化する。
+
+https://github.com/aratius/Concepts/assets/59504416/a6c66b18-560e-47e8-8f30-c67b39523fa8
