--- a/_Counterintuitive/202305_oc.md
+++ b/_Counterintuitive/202305_oc.md
@@ -40,7 +40,8 @@
   当作品は便宜上、上演時間の枠を設け作品名としている。しかし本来、時間という概念をテキストで表記すること自体が無意味な行為である。すなわち作品名でもあるこの上演時間に特別な理由はない。当作品においては、ただ大学のギャラリーの利用可能時間がこの時間であったに過ぎないのだ。
 
 <!-- # スコアについて -->
-当作品は"time event"という独自のイベント・スコアに基づいて制作されている。
+当作品は"time event"という独自のイヴェント・スコアに基づいて制作されている。
+作者はまずパフォーマンスの上演期間を決定し、それをそのまま作品名とする（例: 2023/04/01/10:00(JST)-2023/04/01/18:00(JST)）。上演時間中は途中に休憩などを挟んではならず、すべての時間はパフォーマンス時間として扱う。
 
 ```
 <time event>
