--- a/_Counterintuitive/202305_oc.md
+++ b/_Counterintuitive/202305_oc.md
@@ -4,7 +4,7 @@
 
 <!-- # 概要 -->
 
-  当作品は日本標準時における2023年5月21日10:00-17:00の期間、大阪芸術大学30号館地下ギャラリーCにて上演される。当作品は後述するイベントスコアを用いて制作された、"time event"シリーズのうちのひとつである。
+  当作品は日本標準時における2023年5月21日10:00-17:00の期間、大阪芸術大学30号館地下ギャラリーCにて上演される。当作品は後述するイヴェントスコアを用いて制作された、"time event"シリーズのうちのひとつである。
 
   会場には5つのモニタが空間的に配置され、それぞれがアームによって移動、回転する。鑑賞者からモニタの各ピクセルまでの物理的距離が離れるほど光の到達時間は長くなる。当作品においては仮に光速度を1m/sとおくことによってこの現象を誇張した。
   モニタに映る映像は、物理シミュレーションによって再現される2つのシーンをシームレスに往来する。重力と熱。時間の流れを構成する重要なキーワードからミニマムに構築した。
@@ -22,7 +22,7 @@
 
   <!-- ## 時間の道具的特性 -->
   まず一つ目が、普段我々が認識している軸的な時間だ。これは過去から現在、未来へと一方向に進んでいく軸のようなイメージであり、地球上ではこれを絶対共通のものとして扱う。
-  我々は普段の生活において、軸的時間の道具的特性の恩恵を大いに受けている。当作品の制作過程においても、タスクを日ごとに割り振り、機材の貸出申請には日本標準時における期間を記入した。時間は非常に人間的である。だからこそ現在でも多くの人々の中に流れ、今日も待ち合わせに利用されている。
+  我々は普段の生活において、軸的時間の道具的特性の恩恵を大いに受けている。当作品の制作過程においても、タスクを日ごとに割り振り、機材の貸出申請には日本標準時における期間を記入した。軸的な時間は非常に人間的である。だからこそ現在でも多くの人々の中に流れ、今日も待ち合わせに利用されている。
 
   <!-- ## 一般的な時間という概念について -->
   もう一つは空間に無限に点在する、粒子状の時間だ。そのどれをとっても同じになることはない。時間という概念そのものの存在懐疑へと繋がる。
